# ShortUrl

./: LICENSE.md  README.md
api/: Cargo.toml
api/migration/: Cargo.toml
api/src/: main.rs
api/src/handlers/: url.rs
