[package]
name = "shortUrl"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]


[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
# migration = { path = "migration" }
# sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
